# proactive-context

./: .gitignore  Cargo.toml  README.md  justfile
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
Plans/: archeologist-token-tally.md  silly-percolating-dawn.md
claude/hooks/: ProactiveContext.hook.ts
docs/product-spec/: README.md  agent-awareness.md  archeologist.md  capture-redesign.md  citation-anchored-capture.md  claims-first-architecture.md  claims-first-learnings.md  claims-first-validation-results.md  claims-first-validation.md  deep-audit-2026-07-02.md  entity-and-orientation-capture.md  (+24 more)
resources/: repo-mgmt.md
scripts/: check-rust-loc.sh  rust-loc-baseline.txt  smoke-test.sh  validate-awareness.sh
site/: astro.config.mjs  package-lock.json  package.json
src/: alias.rs  archeologist.rs  artifact_safety.rs  autodoc.rs  awareness.rs  capture.rs  capture_store.rs  chunker.rs  claims.rs  claude_cli.rs  claude_sidecar.rs  codex.rs  config.rs  configure.rs  content_kind.rs  context_overlap.rs  cross_supersede.rs  daemon.rs  db.rs  doctor.rs  embed.rs  embed_sidecar.rs  episode_capture.rs  eval.rs  eval_prompt_variant.rs  eval_realness.rs  eval_recipient_value.rs  eval_run10.rs  eval_run11.rs  eval_run13.rs  eval_run15.rs  eval_run7.rs  eval_run8.rs  eval_run9.rs  eval_t0.rs  events.rs  generate.rs  git_autocommit.rs  git_hooks.rs  health.rs  (+26 more)
tests/: e2e_authority_gate.sh  e2e_revise_capture.sh  project_store_cli.rs
(+908 files in other folders)
