[package]
name = "proactive-context"
version = "0.1.0"
edition = "2021"

# The user-facing command is `pc`. The package keeps its descriptive name; only
# the built binary is renamed. (Data dir is the hardcoded ~/.proactive-context,
# independent of the binary name.)
[[bin]]
name = "pc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
ctrlc = "3"
dirs = "6"
fastembed = "5"
ignore = "0.4"
nix = { version = "0.29", features = ["signal"] }
notify = "8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlite-vec = "0.1"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
rig-core = "0.37"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
